apps/fixmycampus/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fixmycampus-server
  labels:
    app: fixmycampus
    component: server
spec:
  type: ClusterIP
  selector:
    app: fixmycampus
    component: server
  ports:
    - port: 5050
      targetPort: 5050
      protocol: TCP
      name: http
