apps/fixmycampus/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fixmycampus-client
  labels:
    app: fixmycampus
    component: client
spec:
  type: ClusterIP
  selector:
    app: fixmycampus
    component: client
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
